# AtlasNet

./: .clang-format  .clangd  .gitignore  AtlasNetSettings.json  AtlasNetVars.sh  CMakeLists.txt  ClientTest.sh  GetGDBPort.sh  GodDockerFile  IDE_Env_Setup.sh  KDNetVars.sh  README.md  README.txt  Setup.sh  SetupAndStart.sh  Start.sh  god-port.tmp  god_watcher.sh  imgui.ini  premake5.lua  setup.sh  vcpkg.json
AtlasNet/: AtlasNet.sh  AtlasNetInstall.sh  AtlasNetSetup.sh  AtlasNetToolchain.cmake  CMakeLists.txt  vcpkg.json
AtlasNet/API/Server/src/: AtlasNetServer.cpp  AtlasNetServer.hpp
AtlasNet/apps/AtlasNet/: CMakeLists.txt
AtlasNet/apps/AtlasNet/src/: Bootstrap.cpp  Bootstrap.hpp  ImageDockerFiles.hpp  MiscDockerFiles.hpp  Utils.cpp  Utils.hpp
AtlasNet/apps/Cartograph/: CMakeLists.txt
AtlasNet/cmake/: AddSwigLibrary.cmake  AtlasNetSDK.cmake  Definitions.cmake  Install.cmake
AtlasNet/docker/: BuildDockerImages.cmake  BuildDockerImages.sh
AtlasNet/docker/dockerfiles/: CopyDockerfile
AtlasNet/lib/Client/: CMakeLists.txt
AtlasNet/lib/Client/src/: Client.hpp  ClientLink.cpp  ClientLink.hpp  ClientManifest.cpp  ClientManifest.hpp
AtlasNet/lib/Database/: CMakeLists.txt
AtlasNet/lib/Entity/src/: Entity.hpp
AtlasNet/lib/Global/: CMakeLists.txt
AtlasNet/lib/Interlink/: CMakeLists.txt
AtlasNet/lib/Interlink/src/: Interlink.cpp  Interlink.hpp
AtlasNet/lib/InternalDB/src/: EntityAuthorityManifest.hpp
AtlasNet/lib/Native/Client/: Client.hpp  ClientLink.cpp  ClientLink.hpp
AtlasNet/lib/Native/Command/: ClientCommandBus.cpp  ClientCommandBus.hpp  CommandBus.hpp  CommandRouter.hpp  INetCommand.hpp  ServerCommandBus.cpp  ServerCommandBus.hpp
AtlasNet/lib/Native/Entity/: Entity.hpp  EntityHandle.hpp  EntityLedger.cpp  EntityLedger.hpp  GlobalEntityLedger.hpp  Transform.hpp
AtlasNet/lib/Native/Events/: EventRegistry.hpp  EventSystem.hpp
AtlasNet/lib/Native/Handshake/: HandshakeService.hpp
AtlasNet/lib/Native/Heuristic/: BoundLeaser.cpp  BoundLeaser.hpp  HeuristicService.cpp  HeuristicService.hpp  IBounds.hpp  IHeuristic.hpp
AtlasNet/lib/Native/Interlink/: Interlink.cpp  Interlink.hpp
AtlasNet/lib/Native/InternalDB/: InternalDB.cpp
AtlasNet/lib/Native/Network/: NetworkIdentity.hpp
AtlasNet/lib/Native/Shard/: ShardService.cpp  ShardService.hpp
AtlasNet/lib/Native/Snapshot/: SnapshotService.cpp  SnapshotService.hpp  TemporaryMigrationService.cpp  TemporaryMigrationService.hpp
AtlasNet/lib/Native/Transfer/: TransferCoordinator.cpp
AtlasNet/lib/Web/: CMakeLists.txt
AtlasNet/lib/Web/src/: AuthorityTelemetry.cpp  EntityLedgersView.hpp  HeuristicDraw.cpp  HeuristicDraw.hpp  NetworkTelemetry.cpp  NodeJSWrapper.hpp  StreamEntityLedgersView.hpp
AtlasNet/libs/AtlasNet/Client/: CMakeLists.txt
AtlasNet/libs/AtlasNet/Global/: CMakeLists.txt
AtlasNet/libs/BuiltInDB/: CMakeLists.txt
AtlasNet/libs/Database/: CMakeLists.txt
AtlasNet/libs/Debug/: CMakeLists.txt
AtlasNet/libs/Docker/: CMakeLists.txt
AtlasNet/libs/Entity/: CMakeLists.txt
AtlasNet/libs/Events/: CMakeLists.txt
AtlasNet/libs/Heuristic/: CMakeLists.txt
AtlasNet/libs/Interlink/: CMakeLists.txt
AtlasNet/libs/InternalDB/: CMakeLists.txt
AtlasNet/libs/Web/: CMakeLists.txt
AtlasNet/runtime/cartograph/: CMakeLists.txt
AtlasNet/runtime/cartograph/native-server/: config.js  native-server.js
AtlasNet/runtime/cartograph/web/: package.json
AtlasNet/runtime/proxy/src/: Proxy.cpp
AtlasNet/runtime/shard/exc/: Partition.cpp
AtlasNet/runtime/shard/src/: EntityAtBoundsManager.cpp  EntityAtBoundsManager.hpp  (+4 more)
AtlasNet/scripts/: .env  BuildDockerImages.sh
AtlasNet/scripts/Dockerfiles/: Dockerfile  atlasnetsdk.dockerfile  cartograph.dockerfile  docker-bake.json  proxy.dockerfile  shard.dockerfile  watchdog.dockerfile
Examples/Sandbox/: .gitignore  CMakeLists.txt  SandboxServer.dockerfile
Examples/Sandbox/lib/: CMakeLists.txt
Examples/Sandbox/server/: CMakeLists.txt
dev/Minecraft-fabric-neoforge/: .gitignore  AtlasNetSettings.json  CMakeLists.txt  fabric.dockerfile
dev/Minecraft-fabric-neoforge/src/: build.gradle
libs/AtlasNet/Client/: CMakeLists.txt
src/: CMakeLists.txt  Globals.hpp  Singleton.hpp  pch.hpp
src/AtlasNet/: AtlasEntity.hpp  AtlasNet.hpp  AtlasNetBootstrap.cpp  AtlasNetBootstrap.hpp
src/AtlasNet/Client/: AtlasNetClient.cpp  AtlasNetClient.hpp
src/AtlasNet/Server/: AtlasNetServer.cpp  AtlasNetServer.hpp
src/Cartograph/: Cartograph.cpp  Cartograph.hpp
src/Database/: Commands.md  DatabaseRedis.hpp  EntityManifest.hpp  IDatabase.hpp  ProxyRegistry.hpp  RedisCacheDatabase.cpp  RedisCacheDatabase.hpp  ServerRegistry.cpp  ServerRegistry.hpp  ShapeManifest.hpp
src/Demigod/: Demigod.cpp  Demigod.hpp
src/Docker/: DockerIO.cpp  DockerIO.hpp
src/Externlink/: Externlink.cpp  Externlink.hpp
src/GameCoordinator/: GameCoordinator.cpp  GameCoordinator.hpp
src/God/: God.Messages.cpp  God.Shapes.cpp  God.cpp  God.hpp  GodRun.cpp
src/GodView/: AtlasView.cpp  GodView.cpp
src/Heuristic/: Heuristic.cpp  Heuristic.hpp  Shape.hpp
src/Interlink/: Connection.cpp  Connection.hpp  Interlink.cpp  Interlink.hpp  InterlinkEnums.hpp  InterlinkIdentifier.cpp  InterlinkIdentifier.hpp  InterlinkMessage.hpp  InterlinkPacket.hpp
src/KDNet/: KDEntity.hpp  KDNet.hpp  KDNetInterface.cpp  KDNetInterface.hpp
src/KDNet/Client/: KDNetClient.cpp  KDNetClient.hpp
src/KDNet/Server/: KDNetServer.cpp  KDNetServer.hpp
src/Partition/: Partition.cpp  Partition.hpp  PartitionRun.cpp
src/SampleGame/: SampleGame.cpp
src/TestUnityAPI/: BuildCommands.txt  CMakeLists.txt  CatchJsonHelper.hpp  EntityJsonReciever.hpp  EntityJsonSender.hpp  FakePartition.hpp  KDNetUnityAPI.cpp  KDNetUnityAPIHelper.hpp  TestPartition.hpp
src/TestUnityAPI/Server/: BuildCommands.txt  CMakeLists.txt
src/core/RPC/: RPC.cpp
src/core/messages/: MessageSystem.cpp
src/web/backend/: WebBackend.cpp
tests/Unit/Spatial/: CMakeLists.txt  SpatialTests.cpp
tests/Utils/Crash/: CMakeLists.txt  CrashStack.cpp  CrashStack.hpp
tests/Utils/SceneView/: CMakeLists.txt  SceneView.cpp  SceneView.hpp
(+391 files in other folders)
